@@ -14,12 +14,15 @@ inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 Leader.pm
 Leader/Utils.pm
+Leader/Utils/ENG.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
+t/Data-MARC-Leader-Utils-ENG/01-use.t
+t/Data-MARC-Leader-Utils-ENG/02-version.t
 t/Data-MARC-Leader-Utils/01-use.t
 t/Data-MARC-Leader-Utils/02-version.t
 t/Data-MARC-Leader-Utils/03-new.t
@@ -29,6 +32,8 @@ t/Data-MARC-Leader-Utils/06-desc_descriptive_cataloging_form.t
 t/Data-MARC-Leader/01-use.t
 t/Data-MARC-Leader/02-version.t
 t/Data-MARC-Leader/03-new.t
+xt/Data-MARC-Leader-Utils-ENG/01-pod_coverage.t
+xt/Data-MARC-Leader-Utils-ENG/02-pod.t
 xt/Data-MARC-Leader-Utils/01-pod_coverage.t
 xt/Data-MARC-Leader-Utils/02-pod.t
 xt/Data-MARC-Leader/01-pod_coverage.t
