@@ -24,6 +24,8 @@ no_index:
     - xt
 requires:
   Class::Utils: 0
+  English: 0
+  Error::Pure: 0
   Mo: 0
   Mo::utils: 0.15
   Readonly: 0
