@@ -19,6 +19,8 @@ perl_version 5.008;
 readme_from 'Leader.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0;
+requires 'English' => 0;
+requires 'Error::Pure' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.15;
 requires 'Readonly' => 0;
