@@ -1,5 +1,6 @@
 0.06
  - Add tests.
+ - Move constant texts to module for English.
 
 0.05 2024-02-11T23:39:10+01:00
  - Add 'raw' parameter.
